# UltraHex

./: CMakeLists.txt  Main.qml  main.cpp
Application/Checksum/: AbstractChecksumCalculator.cpp  AbstractChecksumCalculator.h  CRCPPCalculator.h  ChecksumCalculatorFactory.cpp  ChecksumCalculatorFactory.h  ChecksumCalculatorManager.cpp  ChecksumCalculatorManager.h  CryptoPPCalculator.h
Application/Core/: AnalysisOperations.qml  Bootstrapper.cpp  Bootstrapper.h  FileOperations.qml  SearchOperations.qml
Application/Files/: FileHandle.cpp  FileHandle.h  FileManager.cpp  FileManager.h  FileModel.cpp  FileModel.h  FileModelRow.cpp  FileModelRow.h  FileReader.cpp  FileReader.h
GUI/Controls/HexView/: HexView.qml  HexViewRow.qml  HexViewSettings.qml
GUI/Controls/TabView/: TabView.qml  TabViewItem.qml
GUI/Core/: Main.qml
GUI/Core/MainMenu/: AnalysisMenu.qml  FileMenu.qml  MainMenu.qml  SearchMenu.qml
GUI/Core/MainToolBar/: MainToolBar.qml
GUI/Dialogs/: ChecksumDialog.qml  FindDialog.qml
GUI/Tabs/: HexViewTab.qml
